skeplib/tests/fixtures/sema_project/valid/folder_import_namespace/main.sk
import string;
fn main() -> Int {
  let a = string.case.up("x");
  let b = string.nested.trim("y");
  if (a == "x" && b == "y") { return 0; }
  return 1;
}
