skeplib/tests/fixtures/sema_project/invalid/duplicate_alias/main.sk
from a import foo as x;
from b import bar as x;
fn main() -> Int { return 0; }
